# jflect

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
examples/: CMakeLists.txt  data.json  example.cpp
include/jflect/: concepts.hpp  helper.hpp  jflect.hpp  meta.hpp  parser.hpp  traits.hpp
tests/: CMakeLists.txt  parser.cpp  read.cpp  write.cpp
